@@ -1,3 +1,7 @@
+2000-06-09  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/GSeq.h: Reverted bogus change.
+
 2000-06-06  Adam Fedor  <fedor@gnu.org>
 
 	* Code cleanup to help with Windows port.
